# claude-bridge

./: .claude-protocol.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DECISIONS.md  LICENSE  MANIFEST  README.md  claude-codex  claude-gemini  pyproject.toml  start.sh
scripts/: mutate.sh  probe_codex_modality.py
src/claude_bridge/: __init__.py  __main__.py  auth.py  config.py  content.py  log.py  provider.py  proxy.py  router.py  stats.py  stream.py
src/claude_bridge/providers/: __init__.py  gemini.py  openai.py  xai.py
tests/: test_auth.py  test_config.py  test_content.py  test_contract.py  test_gemini.py  test_log.py  test_provider.py  test_proxy.py  test_reasoning.py  test_router.py  test_stats.py  test_stream.py  test_trace.py  test_translate.py
